# Demo

./: .gitignore  build.gradle  gradle.properties
animation/: build.gradle
animation/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: alpha_hide.xml  alpha_show.xml
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_main3.xml  activity_main5.xml  activity_main6.xml  activity_recyclerview.xml  item_recyc.xml  item_right_title.xml  item_sort_detail.xml  item_sort_left.xml
app/src/main/res/raw/: vertex_line_bezier  vertex_point  vertex_projection_matrix  vertex_shader_code.glsl
app/src/main/res/values/: colors.xml  styles.xml
base/: build.gradle  proguard-rules.pro
base/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
libjetpackdemo/: build.gradle
libjetpackdemo/src/main/: AndroidManifest.xml
libjetpackdemo/src/main/res/layout/: activity_home.xml  item_shoe.xml
libopengl/: build.gradle
libopengl/src/main/: AndroidManifest.xml
libopengl/src/main/cpp/: CMakeLists.txt  JniImp.cpp
libopengl/src/main/cpp/glm/: glm.hpp
libopengl/src/main/cpp/render/: MyGLRenderContext.cpp  MyGLRenderContext.h
libopengl/src/main/cpp/sample/: GLSampleBase.h  TextureMapSample.cpp  TextureMapSample.h  TriangleSample.cpp  TriangleSample.h
libopengl/src/main/cpp/util/: GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtil.h
rxjava/: build.gradle
rxjava/src/main/: AndroidManifest.xml
view/: build.gradle
(+170 files in other folders)
